--- a/presentation/scrp_workshop.html
+++ b/presentation/scrp_workshop.html
@@ -256,7 +256,7 @@ Slides with this background colour indicate that your action is required, for
     - these slides have countdown timers
         - as a guide, not to be followed strictly
     
-<div class="countdown" id="timer_60a50e6f" style="top:0;right:0;" data-warnwhen="0">
+<div class="countdown" id="timer_60a511b8" style="top:0;right:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">03</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
@@ -371,7 +371,7 @@ class: action
    - click on the links to see an individual page for 
        - states, constituencies, members, and documents
 
-<div class="countdown" id="timer_60a50c72" style="top:0;right:0;" data-warnwhen="0">
+<div class="countdown" id="timer_60a51007" style="top:0;right:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">05</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
    
@@ -474,7 +474,7 @@ install.packages(c("rvest", "RSelenium", "robotstxt", "polite",
 
 ]
 
-<div class="countdown" id="timer_60a50c46" style="top:0;right:0;" data-warnwhen="0">
+<div class="countdown" id="timer_60a51219" style="top:0;right:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">02</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
@@ -997,7 +997,7 @@ class: action
 
   - with the `robotstxt` function
 
-<div class="countdown" id="timer_60a50ca8" style="top:0;right:0;" data-warnwhen="0">
+<div class="countdown" id="timer_60a50eaf" style="top:0;right:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">07</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">30</span></code>
 </div>
 
@@ -1266,7 +1266,7 @@ df_tweets &lt;- df_tweets %&gt;%
 --
 class: action
 
-<div class="countdown" id="timer_60a50f79" style="top:0;right:0;" data-warnwhen="0">
+<div class="countdown" id="timer_60a5122a" style="top:0;right:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">08</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
@@ -1340,7 +1340,7 @@ class: action
 - pull the help file for the `iconv` function first
 
 
-<div class="countdown" id="timer_60a50d98" style="top:0;right:0;" data-warnwhen="0">
+<div class="countdown" id="timer_60a50fb8" style="top:0;right:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">10</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
@@ -1498,7 +1498,7 @@ class: action
 - hint: the function is called `str_to_lower`
 
 
-<div class="countdown" id="timer_60a50d1e" style="top:0;right:0;" data-warnwhen="0">
+<div class="countdown" id="timer_60a5116b" style="top:0;right:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">10</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
@@ -1676,7 +1676,7 @@ class: action
 51) Remove stop words
 
 
-<div class="countdown" id="timer_60a50e36" style="top:0;right:0;" data-warnwhen="0">
+<div class="countdown" id="timer_60a51184" style="top:0;right:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">10</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
