--- a/presentation/scrp_workshop.html
+++ b/presentation/scrp_workshop.html
@@ -269,7 +269,7 @@ Slides with this background colour indicate that your action is required, for
     - these slides have countdown timers
         - as a guide, not to be followed strictly
     
-<div class="countdown" id="timer_60a7876c" style="top:0;right:0;" data-warnwhen="0">
+<div class="countdown" id="timer_60a792e4" style="top:0;right:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">03</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
@@ -384,7 +384,7 @@ class: action
    - click on the links to see an individual page for 
        - states, constituencies, members, and documents
 
-<div class="countdown" id="timer_60a7869f" style="top:0;right:0;" data-warnwhen="0">
+<div class="countdown" id="timer_60a78f7d" style="top:0;right:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">05</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
    
@@ -487,7 +487,7 @@ install.packages(c("rvest", "RSelenium", "robotstxt", "polite",
 
 ]
 
-<div class="countdown" id="timer_60a7866f" style="top:0;right:0;" data-warnwhen="0">
+<div class="countdown" id="timer_60a78fde" style="top:0;right:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">02</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
@@ -996,7 +996,7 @@ robotstxt(domain = "https://parliament-luzland.netlify.app")
 ##         user_agent = bot)
 ## }
 ## &lt;bytecode: 0x0000020abf2f9c20&gt;
-## &lt;environment: 0x0000020abdfe2d68&gt;
+## &lt;environment: 0x0000020abce659a0&gt;
 ## 
 ## attr(,"class")
 ## [1] "robotstxt"
@@ -1087,7 +1087,7 @@ class: action
 
   - with the `robotstxt` function
 
-<div class="countdown" id="timer_60a786ba" style="top:0;right:0;" data-warnwhen="0">
+<div class="countdown" id="timer_60a79215" style="top:0;right:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">07</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">30</span></code>
 </div>
 
@@ -1210,7 +1210,7 @@ class: action
 &lt;br&gt;   
 - compare the look of the front- and back-end
 
-<div class="countdown" id="timer_60a7865b" style="top:0;right:0;" data-warnwhen="0">
+<div class="countdown" id="timer_60a78fbf" style="top:0;right:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">05</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
@@ -1848,7 +1848,7 @@ You may wish to check the protocol first
 
 
 ```r
-paths_allowed("https://parliament-luzland.netlify.app/")
+paths_allowed(domain = "https://parliament-luzland.netlify.app/")
 ```
 
 ```
@@ -1866,18 +1866,154 @@ read_html("https://parliament-luzland.netlify.app/")
 ## [2] &lt;body id="top" data-spy="scroll" data-offset="70" data-target="#navbar-main" class="page-wrapper"&gt;\n&lt;sc ...
 ```
 
+---
+## Scraping Static Pages &amp;mdash; `rvest` &amp;mdash; Get Source Code &amp;mdash; `polite`
+
+- The `polite` package facilitates ethical scraping
+
+   - recommended by `rvest`
+
+&lt;br&gt;
+
+- It divides the process of getting source code into two
+   
+   - check the protocol
+   - get the source only if allowed
+
+&lt;br&gt;
+
+- It can also 
+
+   - wait for a period of time
+       - minimum by what is specified in the protocol     
+&lt;br&gt;
+   - introduce yourself to website administrators while scraping
+   
+---
+## Scraping Static Pages &amp;mdash; `rvest` &amp;mdash; Get Source Code &amp;mdash; `polite`
+
+.pull-left[
+
+- First, use the `bow` function to check the protocol
+
+   - for a specific .yellow-h[URL]
 
 
 
+]
 
 
+.pull-right[
+```md
+
+bow(`url`,
+  user_agent = "polite R package - https://github.com/dmi3kno/polite",
+  delay = 5, 
+  ...
+  )
+  
+```
+
+]
+
+---
+## Scraping Static Pages &amp;mdash; `rvest` &amp;mdash; Get Source Code &amp;mdash; `polite`
+
+.pull-left[
+
+- First, use the `bow` function to check the protocol
+
+   - for a specific URL
+   - for a specific .yellow-h[agent]
+
+&lt;br&gt;
+
+Note that
+
+- the `user_agent` argument can communicate information to website administrators
+   - e.g., your name and contact details
+
+]
 
 
+.pull-right[
+```md
+
+bow(url,
+  `user_agent = "polite R package - https://github.com/dmi3kno/polite"`,
+  delay = 5, 
+  ...
+  )
+  
+```
+
+]
+
+---
+## Scraping Static Pages &amp;mdash; `rvest` &amp;mdash; Get Source Code &amp;mdash; `polite`
+
+.pull-left[
+
+- First, use the `bow` function to check the protocol
+
+   - for a specific URL
+   - for a specific .yellow-h[agent]
+   - for .yellow-h[crawl-delay directives]
+
+&lt;br&gt;
+
+Note that
+
+- the `delay` argument cannot be smaller than the directive
+   - if there is one
+
+]
 
 
+.pull-right[
+```md
+
+bow(url,
+  user_agent = "polite R package - https://github.com/dmi3kno/polite",
+  `delay = 5`, 
+  ...
+  )
+  
+```
+]
+
+---
+## Scraping Static Pages &amp;mdash; `rvest` &amp;mdash; Get Source Code &amp;mdash; `polite`
+
+.pull-left[
+
+- Second, use the `scrape` function get source code
+
+   - for an object created with the .yellow-h[`bow`] function
+
+&lt;br&gt;
+
+Note that
+
+- `scrape` will only work if the results from `bow` are positive
+    - creating a safety valve for ethical scraping     
+&lt;br&gt;    
+- by piping, `bow` into `scrape`, you can avoid creating objects
+
+]
 
 
+.pull-right[
+```md
 
+scrape(`bow`,
+       ...
+       )
+  
+```
+]
+
+---
 
 ---
 name: part5
@@ -2063,7 +2199,7 @@ df_tweets &lt;- df_tweets %&gt;%
 --
 class: action
 
-<div class="countdown" id="timer_60a78405" style="top:0;right:0;" data-warnwhen="0">
+<div class="countdown" id="timer_60a7909d" style="top:0;right:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">08</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
@@ -2137,7 +2273,7 @@ class: action
 - pull the help file for the `iconv` function first
 
 
-<div class="countdown" id="timer_60a78778" style="top:0;right:0;" data-warnwhen="0">
+<div class="countdown" id="timer_60a79155" style="top:0;right:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">10</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
@@ -2295,7 +2431,7 @@ class: action
 - hint: the function is called `str_to_lower`
 
 
-<div class="countdown" id="timer_60a785de" style="top:0;right:0;" data-warnwhen="0">
+<div class="countdown" id="timer_60a79226" style="top:0;right:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">10</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
@@ -2473,7 +2609,7 @@ class: action
 51) Remove stop words
 
 
-<div class="countdown" id="timer_60a7856f" style="top:0;right:0;" data-warnwhen="0">
+<div class="countdown" id="timer_60a790f1" style="top:0;right:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">10</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
